--- a/css/omidraetscenter.css
+++ b/css/omidraetscenter.css
@@ -169,7 +169,8 @@ h2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 30px;
-    margin: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
     padding: 20px;
     text-align: start;
   }
