--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,3 @@
-/********Animationer**********/
-.eventbillede {
-  animation: slideIn 4s ease-out forwards;
-  animation-timeline: view();
-  animation-range: entry 0% cover 40%;
-}
-
-@keyframes slideIn {
-  from {
-    opacity: 0;
-    transform: translateX(-80px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
 /************Popover***********/
 #plantegning-popover {
   padding: 0;
@@ -44,6 +26,11 @@
   max-width: 90vw;
   max-height: 90vh;
   object-fit: contain;
+}
+
+.plantegning button {
+  padding: 0;
+  box-shadow: none;
 }
 /****************************Hero***********************/
 
@@ -93,6 +80,10 @@ h3 {
 
 .cta-btn {
   margin-top: 2rem;
+}
+
+a {
+  text-decoration: none;
 }
 /******************Event***************/
 .beg {
